# code-personalization

./: CONTRIBUTING.md  README.md  pyproject.toml
src/code_personalization/: __init__.py  cli.py  main.py
tests/: test_main.py
