[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "code-personalization"
version = "0.1.0"
description = "A Python library that learns your coding style and preferences to suggest personalized code snippets and solutions."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# Add transformers and other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^6.0"